--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "mdi-material-ui": "^6.19.0",
     "gatsby": "^2.24.34",
     "gatsby-plugin-typescript": "^2.4.17",
     "gatsby-source-contentful": "^2.3.56",
