--- a/package.json
+++ b/package.json
@@ -15,19 +15,29 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
+    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
-    "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.24.80",
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-typescript": "^2.4.21",
+    "gatsby-source-contentful": "^2.3.52",
     "mdi-material-ui": "^6.19.0",
-    "gatsby": "^2.24.34",
-    "gatsby-plugin-typescript": "^2.4.17",
-    "gatsby-source-contentful": "^2.3.56",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.9.7"
+    "react-helmet": "^6.1.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.5",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8"
   }
 }
